# OurLordAndSavior

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CTestConfig.cmake  License.txt  OLASConfig.h.in  build.sh  configure.sh  install.sh  main.cpp  readme.md  run.sh
Adder/: CMakeLists.txt  adder.cpp  adder.h
tests/: CMakeLists.txt
tests/graphics/: CMakeLists.txt  tester.cpp
tests/math/: CMakeLists.txt  tester.cpp
